fix: video width on mobile

--- a/src/page/second-page/sections/header/header.style.sass
+++ b/src/page/second-page/sections/header/header.style.sass
@@ -1,9 +1,11 @@
+@import ../../../global/sass/mixins
+
 .ps1
   position: relative
   height: 100%
 
   video
-    max-width: 200px
+    +adaptive(max-width, 200px, 140px)
 
 .ps1-running-tape
   position: absolute
